Added twilio authentication

--- a/env.example
+++ b/env.example
@@ -27,3 +27,4 @@ MAX_CALL_DURATION_SECONDS=900
 SILENCE_TIMEOUT_SECONDS=10
 SILENCE_HANGUP_SECONDS=15
 VOICEMAIL_SILENCE_SECONDS=3
+TWILIO_VALIDATE_SIGNATURES=true
